Adding api call

--- a/src/app/upload-file/upload-file.component.css
+++ b/src/app/upload-file/upload-file.component.css
@@ -109,3 +109,10 @@
     border: 0;
     transition: all .2s ease;
   }
+
+  .upload{
+    font-weight:bold;
+    color:#28a745;
+    margin-left: 15px;
+    line-height: 36px;
+}
