--- a/src/app/upload-file/upload-file.component.html
+++ b/src/app/upload-file/upload-file.component.html
@@ -1,7 +1,7 @@
 <div class="file-upload">
-    <button class="file-upload-btn" type="button" onclick="document.getElementById('file-upload-input').click()">Add File</button>
+    <button class="file-upload-btn" type="button" (click)="file.click()">Add File</button>
     <div class="image-upload-wrap">
-      <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" id="file-upload-input"/>
+      <input class="file-upload-input" #file type='file' (change)="uploadFile(file.files)"/>
       <div class="drag-text">
         <h3>Drag and drop a file or select add File</h3>
       </div>
@@ -11,5 +11,13 @@
       <div class="image-title-wrap">
         <button type="button" onclick="removeUpload()" class="remove-image">Remove <span class="image-title">Uploaded Image</span></button>
       </div>
+    </div>
+    <div class="progress">
+      <span class="upload" *ngIf="progress > 0">
+        {{progress}}%
+      </span>
+      <span class="upload" *ngIf="message">
+        {{message}}
+      </span>
     </div>
   </div>
