--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -48,17 +48,33 @@ body {
     flex-basis: 10%;
   }
   .responsive-table .col-2 {
-    flex-basis: 30%;
+    flex-basis: 20%;
   }
   .responsive-table .col-3 {
-    flex-basis: 30%;
+    flex-basis: 20%;
   }
   .responsive-table .col-4 {
-    flex-basis: 10%;
+    flex-basis: 30%;
   }
   .responsive-table .col-5 {
     flex-basis: 10%;
   }
   .responsive-table .col-6 {
     flex-basis: 10%;
+  }
+  .responsive-table .full-col {
+    flex-basis: 100%;
+    border: 1px solid #95A5A6;
+    text-align: center;
+  }
+
+  .full-col span {
+    margin: auto auto;
+  }
+  .container-table {
+    overflow-y: scroll;
+    height: 43vh;
+  }
+  .table-row {
+    border-bottom: #95A5A6 1px solid;
   }
